deployment/Ingress.yaml
#
# The load balancer for our C# API, which exposes it over port 80
# The below host name is configured on the host PC in the /etc/hosts file
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netcoreapi-ingress
spec:
  tls:
    - hosts:
        - netcoreapi.mycompany.com
      secretName: mycompany-com-tls
  rules:
    - host: netcoreapi.mycompany.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netcoreapi-svc
                port:
                  number: 8000
